--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ license = "MIT"
 
 [dependencies]
 structopt = { version = "0.3", default-features = false }
+reqwest = { version = "0.11", features = ["json", "cookies"] }
+tokio = { version = "1", features = ["full"] }
