--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ license = "MIT"
 structopt = { version = "0.3", default-features = false }
 reqwest = { version = "0.11", features = ["json", "cookies"] }
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
