--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = { version = "0.11", features = ["json", "cookies"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+dialoguer = "0.10.0"
