--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bashfull"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 description = "never forget a bash command again"
 license = "MIT"
@@ -9,6 +9,7 @@ license = "MIT"
 
 [dependencies]
 structopt = { version = "0.3", default-features = false }
+openssl = { version = "0.10", features = ["vendored"] }
 reqwest = { version = "0.11", features = ["json", "cookies"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
