--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "commander": "^9.3.0",
     "conf": "^10.1.2",
     "esbuild": "^0.14.42",
+    "keypress": "^0.2.1",
     "n": "^8.2.0",
-    "prompt": "^1.3.0"
+    "prompt": "^1.3.0",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "prettier": "2.6.2"
