--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/bitfuel-ai/bitfuel-cli/issues"
   },
-  "homepage": "https://github.com/bitfuel-ai/bitfuel-cli#readme",
+  "homepage": "bitfuel.dev",
   "dependencies": {
     "async": "^3.2.3",
     "axios": "^0.27.2",
